--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
+    "unplugin-fonts": "^1.1.1",
     "vite": "^5.1.4"
   }
 }
