--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build-and-preview": "tsc && vite build && vite preview",
+    "build-and-deploy-test": "tsc && vite build && firebase hosting:channel:deploy new_theme",
+    "deploy-prod": "firebase deploy --only hosting"
   },
   "dependencies": {
     "firebase": "^10.8.0",
