--- a/.github/workflows/build-and-preview.yml
+++ b/.github/workflows/build-and-preview.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploy to Preview Channel
-        run: firebase hosting:channel:deploy pr-${{ github.event.number }} --expires 7d --token "${{ secrets.FIREBASE_TOKEN }}"
+        run: firebase hosting:channel:deploy pr-${{ github.event.number }} --expires 7d --project "${{ secrets.VITE_PROJECT_ID }}" --token "${{ secrets.FIREBASE_TOKEN }}"
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
           VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
