--- a/.github/workflows/build-and-preview.yml
+++ b/.github/workflows/build-and-preview.yml
@@ -38,4 +38,9 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploy to Preview Channel
-        run: firebase hosting:channel:deploy pr-${{ github.event.number }} --expires 7d --project "${{ secrets.VITE_PROJECT_ID }}" --token "${{ secrets.FIREBASE_TOKEN }}"
+        run: |
+          firebase hosting:channel:deploy pr-${{ github.event.number }} --expires 7d --project "${{ secrets.VITE_PROJECT_ID }}" --token "${{ secrets.FIREBASE_TOKEN }}" | tee deploy_output.txt
+          echo "--------------------------------------------------"
+          echo "PREVIEW URL:"
+          grep "Channel URL" deploy_output.txt | sed 's/Channel URL: //'
+          echo "--------------------------------------------------"
