--- a/.github/workflows/build-and-preview.yml
+++ b/.github/workflows/build-and-preview.yml
@@ -13,7 +13,7 @@ jobs:
       VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
       VITE_AUTH_DOMAIN: ${{ secrets.VITE_AUTH_DOMAIN }}
       VITE_DATABASE_URL: ${{ secrets.VITE_DATABASE_URL }}
-      VITE_PROJECT_ID: ${{ secrets.VITE_PROJECT_ID }}
+      VITE_PROJECT_ID: ${{ vars.VITE_PROJECT_ID }}
       VITE_STORAGE_BUCKET: ${{ secrets.VITE_STORAGE_BUCKET }}
       VITE_MESSAGING_SENDER_ID: ${{ secrets.VITE_MESSAGING_SENDER_ID }}
       VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
@@ -39,7 +39,7 @@ jobs:
 
       - name: Deploy to Preview Channel
         run: |
-          firebase hosting:channel:deploy pr-${{ github.event.number }} --expires 7d --project "${{ secrets.VITE_PROJECT_ID }}" --token "${{ secrets.FIREBASE_TOKEN }}" | tee deploy_output.txt
+          firebase hosting:channel:deploy pr-${{ github.event.number }} --expires 7d --project "${{ vars.VITE_PROJECT_ID }}" --token "${{ secrets.FIREBASE_TOKEN }}" | tee deploy_output.txt
           echo "--------------------------------------------------"
           echo "PREVIEW URL:"
           grep "Channel URL" deploy_output.txt | sed 's/Channel URL: //'
