--- a/.github/workflows/manual-deploy-test.yml
+++ b/.github/workflows/manual-deploy-test.yml
@@ -11,7 +11,7 @@ jobs:
       VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
       VITE_AUTH_DOMAIN: ${{ secrets.VITE_AUTH_DOMAIN }}
       VITE_DATABASE_URL: ${{ secrets.VITE_DATABASE_URL }}
-      VITE_PROJECT_ID: ${{ secrets.VITE_PROJECT_ID }}
+      VITE_PROJECT_ID: ${{ vars.VITE_PROJECT_ID }}
       VITE_STORAGE_BUCKET: ${{ secrets.VITE_STORAGE_BUCKET }}
       VITE_MESSAGING_SENDER_ID: ${{ secrets.VITE_MESSAGING_SENDER_ID }}
       VITE_APP_ID: ${{ secrets.VITE_APP_ID }}
