--- a/.github/workflows/manual-deploy-test.yml
+++ b/.github/workflows/manual-deploy-test.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+
       - name: Build and Deploy to Test
         run: npm run build-and-deploy-test
